missing trailing slashes

--- a/_posts/python/3d-bubble/2015-06-30-3dbubble.html
+++ b/_posts/python/3d-bubble/2015-06-30-3dbubble.html
@@ -1,5 +1,5 @@
 ---
-permalink: python/3d-bubble-charts
+permalink: python/3d-bubble-charts/
 description: How to make 3D Bubble Charts in Python with Plotly. Three examples of 3D Bubble Charts.
 title: Python 3D Bubble Charts | plotly
 has_thumbnail: true
