--- a/_posts/python/3d-network/2015-06-30-Les-miserables-network.html
+++ b/_posts/python/3d-network/2015-06-30-Les-miserables-network.html
@@ -1,5 +1,5 @@
 ---
-permalink: python/3d-network-graph
+permalink: python/3d-network-graph/
 description: How to make 3D Network Graphs in Python.
 title: Python 3D Network Graphs | plotly
 has_thumbnail: true
