--- a/_posts/python/callbacks-dropdowns/2015-04-09-dropdowns_index.html
+++ b/_posts/python/callbacks-dropdowns/2015-04-09-dropdowns_index.html
@@ -1,8 +1,8 @@
 ---
 title: Adding Dropdowns with JavaScript | Examples | Plotly
 name: Dropdown Events
-permalink: python/dropdowns
-description: How to add dropdowns to Python charts with JavaScript. 
+permalink: python/dropdowns/
+description: How to add dropdowns to Python charts with JavaScript.
 layout: base
 thumbnail: thumbnail/dropdown.jpg
 language: python
