--- a/_posts/python/chord/2015-06-30-chord.html
+++ b/_posts/python/chord/2015-06-30-chord.html
@@ -1,5 +1,5 @@
 ---
-permalink: python/chord-diagram
+permalink: python/chord-diagram/
 description: How to make an interactive chord diagram in Python with Plotly and iGraph.
 title: Python Chord Diagram | plotly
 has_thumbnail: true
