--- a/_posts/python/delete/2015-06-30-delete.html
+++ b/_posts/python/delete/2015-06-30-delete.html
@@ -1,5 +1,5 @@
 ---
-permalink: python/delete-plots
+permalink: python/delete-plots/
 description: How to delete plotly graphs in python.
 title: Deleting Plots with the Python API
 has_thumbnail: false
@@ -105,7 +105,7 @@ page_type: example_index
 <span class="n">url</span> <span class="o">=</span> <span class="n">py</span><span class="o">.</span><span class="n">plot</span><span class="p">({</span><span class="s">&quot;data&quot;</span><span class="p">:</span> <span class="p">[{</span><span class="s">&quot;x&quot;</span><span class="p">:</span> <span class="p">[</span><span class="mi">1</span><span class="p">,</span> <span class="mi">2</span><span class="p">,</span> <span class="mi">3</span><span class="p">],</span>
                          <span class="s">&quot;y&quot;</span><span class="p">:</span> <span class="p">[</span><span class="mi">4</span><span class="p">,</span> <span class="mi">2</span><span class="p">,</span> <span class="mi">4</span><span class="p">]}],</span>
                <span class="s">&quot;layout&quot;</span><span class="p">:</span> <span class="p">{</span><span class="s">&quot;title&quot;</span><span class="p">:</span> <span class="s">&quot;Let&#39;s Trash This Plot&lt;br&gt;(then restore it)&quot;</span><span class="p">}},</span>
-              <span class="n">filename</span><span class="o">=</span><span class="s">&#39;trash example&#39;</span><span class="p">)</span> 
+              <span class="n">filename</span><span class="o">=</span><span class="s">&#39;trash example&#39;</span><span class="p">)</span>
 
 <span class="n">url</span>
 </pre></div>
@@ -276,7 +276,7 @@ page_type: example_index
 <div class=" highlight hl-ipython2"><pre><span class="n">url</span> <span class="o">=</span> <span class="n">py</span><span class="o">.</span><span class="n">plot</span><span class="p">({</span><span class="s">&quot;data&quot;</span><span class="p">:</span> <span class="p">[{</span><span class="s">&quot;x&quot;</span><span class="p">:</span> <span class="p">[</span><span class="mi">1</span><span class="p">,</span> <span class="mi">2</span><span class="p">,</span> <span class="mi">3</span><span class="p">],</span>
                          <span class="s">&quot;y&quot;</span><span class="p">:</span> <span class="p">[</span><span class="mi">3</span><span class="p">,</span> <span class="mi">2</span><span class="p">,</span> <span class="mi">1</span><span class="p">]}],</span>
                <span class="s">&quot;layout&quot;</span><span class="p">:</span> <span class="p">{</span><span class="s">&quot;title&quot;</span><span class="p">:</span> <span class="s">&quot;Let&#39;s Delete This Plot&lt;br&gt;&lt;b&gt;FOREVER!!!!&lt;/b&gt;&quot;</span><span class="p">}},</span>
-              <span class="n">filename</span><span class="o">=</span><span class="s">&#39;PERMANENT delete example&#39;</span><span class="p">)</span> 
+              <span class="n">filename</span><span class="o">=</span><span class="s">&#39;PERMANENT delete example&#39;</span><span class="p">)</span>
 <span class="n">url</span>
 </pre></div>
 
