--- a/_posts/python/dendrogram/2015-06-30-dendrograms.html
+++ b/_posts/python/dendrogram/2015-06-30-dendrograms.html
@@ -1,5 +1,5 @@
 ---
-permalink: python/dendrogram
+permalink: python/dendrogram/
 description: How to make a dendrogram in Python with Plotly. Three examples of dendrograms.
 title: Python Dendrograms | plotly
 has_thumbnail: true
