--- a/_posts/python/alpha-shapes/2016-01-15-alpha_shapes.html
+++ b/_posts/python/alpha-shapes/2016-01-15-alpha_shapes.html
@@ -1,5 +1,5 @@
 ---
-permalink: python/alpha-shapes
+permalink: python/alpha-shapes/
 description: How to make Alpha Shapes in Python with Plotly.
 title: Python Alpha Shapes | plotly
 has_thumbnail: true
