--- a/_posts/python/ternary-contour/2015-06-30-ternary-contour.html
+++ b/_posts/python/ternary-contour/2015-06-30-ternary-contour.html
@@ -1,5 +1,5 @@
 ---
-permalink: python/ternary-contour
+permalink: python/ternary-contour/
 description: How to make Ternary Contour Plot in Python with Plotly.
 title: Python Ternary Contour Plots | plotly
 has_thumbnail: true
