ipynb conversion and edits to publisher cell

--- a/_posts/python/3d-network/2015-06-30-Les-miserables-network.html
+++ b/_posts/python/3d-network/2015-06-30-Les-miserables-network.html
@@ -3,7 +3,7 @@ permalink: python/3d-network-graph
 description: How to make 3D Network Graphs in Python. 
 name: Python 3D Network Graphs | plotly
 has_thumbnail: true
-thumbnail: /thumbnail/3dnetwork.jpg
+thumbnail: thumbnail/3dnetwork.jpg
 layout: user-guide
 name: 3D Network Graphs
 language: python
