publisher cell updates + notebook conversion

--- a/_posts/python/3d-clusters/2015-06-30-3d-clusters.html
+++ b/_posts/python/3d-clusters/2015-06-30-3d-clusters.html
@@ -1,11 +1,11 @@
 ---
 permalink: python/3d-point-clustering/
-description: How to cluster points in 3d with alpha shapes in Python and Plotly
+description: How to cluster points in 3d with alpha shapes in plotly and Python
 name: Python 3D Clustering | plotly
 has_thumbnail: true
 thumbnail: thumbnail/3d-clusters.jpg
 layout: user-guide
-name: How to cluster points in 3d
+name: 3d Clustering
 language: python
 title: 3D Point Clustering in Python | plotly
 display_as: 3d_charts
