--- a/_posts/python/3d-wireframe/2015-06-30-3d-wireframe.html
+++ b/_posts/python/3d-wireframe/2015-06-30-3d-wireframe.html
@@ -5,7 +5,7 @@ name: Python Wireframe Plots | plotly
 has_thumbnail: true
 thumbnail: thumbnail/wireframe.jpg
 layout: user-guide
-name: How to make 3D wireframe plots
+name: 3D Wireframe Plots
 language: python
 title: 3D Wireframe Plots in Python | plotly
 display_as: 3d_charts
