--- a/_posts/python/3d-ribbon/2015-06-30-ribbon.html
+++ b/_posts/python/3d-ribbon/2015-06-30-ribbon.html
@@ -1,12 +1,13 @@
 ---
 permalink: python/ribbon-plots/
-description: How to make ribbon plots in Python.
-title: Python Ribbon Plots | plotly
+description: How to make ribbon plots in Python. 
+name: Python Ribbon Plots | plotly
 has_thumbnail: true
-thumbnail: thumbnail/ribbon-plot.jpg
+thumbnail: /images/ribbon-plot.png
 layout: user-guide
 name: Ribbon Plots
 language: python
+title: Python Ribbon Plots | plotly
 display_as: 3d_charts
 has_thumbnail: true
 page_type: example_index
@@ -18,52 +19,13 @@ order: 5
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Ribbon-Plots-in-Python">Ribbon Plots in Python<a class="anchor-link" href="#Ribbon-Plots-in-Python">&#182;</a></h1>
+<h4 id="Basic-Ribbon-Plot">Basic Ribbon Plot<a class="anchor-link" href="#Basic-Ribbon-Plot">&#182;</a></h4>
 </div>
 </div>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[1]:</div>
-<div class="inner_cell">
-    <div class="input_area">
-<div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly</span>
-<span class="n">plotly</span><span class="o">.</span><span class="n">__version__</span>
-</pre></div>
-
-</div>
-</div>
-</div>
-
-<div class="output_wrapper">
-<div class="output">
-
-
-<div class="output_area"><div class="prompt output_prompt">Out[1]:</div>
-
-
-<div class="output_text output_subarea output_execute_result">
-<pre>&apos;1.8.8&apos;</pre>
-</div>
-
-</div>
-
-</div>
-</div>
-
-</div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<h5 id="Ribbon-Plot">Ribbon Plot<a class="anchor-link" href="#Ribbon-Plot">&#182;</a></h5>
-</div>
-</div>
-</div>
-<div class="cell border-box-sizing code_cell rendered">
-<div class="input">
-<div class="prompt input_prompt">In&nbsp;[2]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>
@@ -78,7 +40,7 @@ order: 5
 
 <span class="n">traces</span> <span class="o">=</span> <span class="p">[]</span>
 <span class="n">y_raw</span> <span class="o">=</span> <span class="n">spectra</span><span class="p">[:,</span> <span class="mi">0</span><span class="p">]</span> <span class="c"># wavelength</span>
-<span class="n">sample_size</span> <span class="o">=</span> <span class="n">spectra</span><span class="o">.</span><span class="n">shape</span><span class="p">[</span><span class="mi">1</span><span class="p">]</span><span class="o">-</span><span class="mi">1</span>
+<span class="n">sample_size</span> <span class="o">=</span> <span class="n">spectra</span><span class="o">.</span><span class="n">shape</span><span class="p">[</span><span class="mi">1</span><span class="p">]</span><span class="o">-</span><span class="mi">1</span> 
 <span class="k">for</span> <span class="n">i</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="mi">1</span><span class="p">,</span> <span class="n">sample_size</span><span class="p">):</span>
     <span class="n">z_raw</span> <span class="o">=</span> <span class="n">spectra</span><span class="p">[:,</span> <span class="n">i</span><span class="p">]</span>
     <span class="n">x</span> <span class="o">=</span> <span class="p">[]</span>
@@ -110,10 +72,10 @@ order: 5
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[2]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[1]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~chelsea_lyn/8748.embed" height="525px" width="100%"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~demo_account/28.embed" height="525px" width="100%"></iframe>
 </div>
 
 </div>
@@ -121,4 +83,23 @@ order: 5
 </div>
 </div>
 
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h4 id="Reference">Reference<a class="anchor-link" href="#Reference">&#182;</a></h4>
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>See <a href="https://plot.ly/python/reference/">https://plot.ly/python/reference/</a> for more information!</p>
+
+</div>
+</div>
 </div>{% endraw %}
