edited publisher cells

--- a/_posts/python/3d-bubble/2015-06-30-3dbubble.html
+++ b/_posts/python/3d-bubble/2015-06-30-3dbubble.html
@@ -1,12 +1,13 @@
 ---
-permalink: python/3d-bubble-charts/
+permalink: python/3d-bubble-charts
 description: How to make 3D Bubble Charts in Python with Plotly. Three examples of 3D Bubble Charts.
 title: Python 3D Bubble Charts | plotly
 has_thumbnail: true
-thumbnail: thumbnail/3dbubble.jpg
+thumbnail: /images/3dbubble.png
 layout: user-guide
 name: 3D Bubble Charts
 language: python
+title: Python 3D Bubble Charts | plotly
 display_as: 3d_charts
 has_thumbnail: true
 page_type: example_index
@@ -18,22 +19,13 @@ order: 2
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="3D-Bubble-Charts-in-Python">3D Bubble Charts in Python<a class="anchor-link" href="#3D-Bubble-Charts-in-Python">&#182;</a></h1>
-</div>
-</div>
-</div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<h5 id="Example-with-Sizing-and-Color-by-Variables-from-a-dataset">Example with Sizing and Color by Variables from a dataset<a class="anchor-link" href="#Example-with-Sizing-and-Color-by-Variables-from-a-dataset">&#182;</a></h5>
+<h4 id="Sizing-and-Coloring-by-Variables">Sizing and Coloring by Variables<a class="anchor-link" href="#Sizing-and-Coloring-by-Variables">&#182;</a></h4>
 </div>
 </div>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[2]:</div>
+<div class="prompt input_prompt">In&nbsp;[1]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>
@@ -75,10 +67,10 @@ order: 2
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[2]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[1]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~chelsea_lyn/8792.embed" height="800px" width="800px"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~demo_account/113.embed" height="800px" width="800px"></iframe>
 </div>
 
 </div>
@@ -92,7 +84,7 @@ order: 2
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h5 id="Example-with-Sizing-by-a-Variable">Example with Sizing by a Variable<a class="anchor-link" href="#Example-with-Sizing-by-a-Variable">&#182;</a></h5>
+<h4 id="Example-with-Sizing-by-a-Variable">Example with Sizing by a Variable<a class="anchor-link" href="#Example-with-Sizing-by-a-Variable">&#182;</a></h4>
 </div>
 </div>
 </div>
@@ -108,7 +100,7 @@ order: 2
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[3]:</div>
+<div class="prompt input_prompt">In&nbsp;[2]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>
@@ -136,7 +128,7 @@ order: 2
         <span class="n">sizeref</span> <span class="o">=</span> <span class="mi">750</span><span class="p">,</span> <span class="c"># info on sizeref: https://plot.ly/python/reference/#scatter-marker-sizeref</span>
         <span class="n">size</span> <span class="o">=</span> <span class="n">planet_diameter</span><span class="p">,</span>
         <span class="n">color</span> <span class="o">=</span> <span class="n">planet_colors</span><span class="p">,</span>
-        <span class="p">)</span>
+        <span class="p">)</span>  
 <span class="p">)</span>
 <span class="n">data</span><span class="o">=</span><span class="p">[</span><span class="n">trace1</span><span class="p">]</span>
 
@@ -166,10 +158,10 @@ order: 2
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[3]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[2]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~chelsea_lyn/8794.embed" height="800px" width="800px"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~demo_account/115.embed" height="800px" width="800px"></iframe>
 </div>
 
 </div>
@@ -183,7 +175,7 @@ order: 2
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h5 id="Example-Editing-the-Colorbar">Example Editing the Colorbar<a class="anchor-link" href="#Example-Editing-the-Colorbar">&#182;</a></h5>
+<h4 id="Example-Editing-the-Colorbar">Example Editing the Colorbar<a class="anchor-link" href="#Example-Editing-the-Colorbar">&#182;</a></h4>
 </div>
 </div>
 </div>
@@ -199,7 +191,7 @@ order: 2
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[4]:</div>
+<div class="prompt input_prompt">In&nbsp;[3]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>
@@ -227,7 +219,7 @@ order: 2
         <span class="n">color</span> <span class="o">=</span> <span class="n">temperatures</span><span class="p">,</span>
         <span class="n">colorbar</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">(</span><span class="n">title</span> <span class="o">=</span> <span class="s">&#39;Mean&lt;br&gt;Temperature&#39;</span><span class="p">),</span>
         <span class="n">colorscale</span><span class="o">=</span><span class="p">[[</span><span class="mi">0</span><span class="p">,</span> <span class="s">&#39;rgb(5, 10, 172)&#39;</span><span class="p">],</span> <span class="p">[</span><span class="o">.</span><span class="mi">3</span><span class="p">,</span> <span class="s">&#39;rgb(255, 255, 255)&#39;</span><span class="p">],</span> <span class="p">[</span><span class="mi">1</span><span class="p">,</span> <span class="s">&#39;rgb(178, 10, 28)&#39;</span><span class="p">]]</span>
-        <span class="p">)</span>
+        <span class="p">)</span>  
 <span class="p">)</span>
 <span class="n">data</span><span class="o">=</span><span class="p">[</span><span class="n">trace1</span><span class="p">]</span>
 
@@ -257,10 +249,10 @@ order: 2
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[4]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[3]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~chelsea_lyn/8796.embed" height="800px" width="800px"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~demo_account/117.embed" height="800px" width="800px"></iframe>
 </div>
 
 </div>
