--- a/_posts/python/3d-filled-line/2015-06-30-3d-filled-line.html
+++ b/_posts/python/3d-filled-line/2015-06-30-3d-filled-line.html
@@ -3,7 +3,7 @@ permalink: python/3d-filled-line-plots/
 description: How to make 3D Filled Line Plots in Python
 name: 3D Filled Line Plots in Python | plotly
 has_thumbnail: true
-thumbnail: /images/ribbon-plot.png
+thumbnail: thumbnail/3d-filled-line-plot.jpg
 layout: user-guide
 name: 3D Filled Line Plots
 language: python
