--- a/_posts/python/3d-line/2015-06-30-3d-line.html
+++ b/_posts/python/3d-line/2015-06-30-3d-line.html
@@ -1,9 +1,9 @@
 ---
-permalink: python/3d-point-clustering/
+permalink: python/3d-line-plots/
 description: How to make 3D Line Plots
-name: Python 3D Clustering | plotly
+name: Python 3D Line Plots | plotly
 has_thumbnail: true
-thumbnail: python/3d-line-plots/
+thumbnail: thumbnail/3d-line.jpg
 layout: user-guide
 name: 3D Line Plots
 language: python
