added a redirect_from attribute in yaml

--- a/_posts/python/streaming/2015-06-30-python_streaming.html
+++ b/_posts/python/streaming/2015-06-30-python_streaming.html
@@ -8,6 +8,7 @@ layout: user-guide
 name: Getting Started with Streaming
 language: python
 title: Getting Started with Plotly Streaming
+redirect_from: python/streaming-line-tutorial/
 has_thumbnail: true
 page_type: u-guide
 ---
