--- a/_posts/2016-02-20-dashboardly.html
+++ b/_posts/2016-02-20-dashboardly.html
@@ -34,6 +34,7 @@ layout: dashboardly
         <li><a href="#JSON-Structure">API - JSON Structure</a></li>
         <li><a href="#POST">API - POST at /publish</code></a></li>
         <li><a href="#Python-Example">API - Python Example</a></li>
+        <li><a href="#R-Example">API - R Example</a></li>
         <li><a href="#MATLAB-Example">API - MATLAB Example</a></li>
     </ul>
 </article>
