--- a/_posts/python/scatterplot-matrix/2015-06-30-scatterplot-matrix.html
+++ b/_posts/python/scatterplot-matrix/2015-06-30-scatterplot-matrix.html
@@ -78,7 +78,7 @@ order: 2.9
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h4 id="Simple-Scatterplot-Matrix">Simple Scatterplot Matrix<a class="anchor-link" href="#Simple-Scatterplot-Matrix">&#182;</a></h4>
+<h4 id="Basic-Scatterplot-Matrix">Basic Scatterplot Matrix<a class="anchor-link" href="#Basic-Scatterplot-Matrix">&#182;</a></h4>
 </div>
 </div>
 </div>
@@ -96,7 +96,7 @@ order: 2.9
                          <span class="n">columns</span><span class="o">=</span><span class="p">[</span><span class="s">&#39;Column A&#39;</span><span class="p">,</span> <span class="s">&#39;Column B&#39;</span><span class="p">])</span>
 
 <span class="n">fig</span> <span class="o">=</span> <span class="n">FF</span><span class="o">.</span><span class="n">create_scatterplotmatrix</span><span class="p">(</span><span class="n">dataframe</span><span class="p">,</span> <span class="n">height</span><span class="o">=</span><span class="mi">800</span><span class="p">,</span> <span class="n">width</span><span class="o">=</span><span class="mi">800</span><span class="p">)</span>
-<span class="n">py</span><span class="o">.</span><span class="n">iplot</span><span class="p">(</span><span class="n">fig</span><span class="p">,</span> <span class="n">filename</span><span class="o">=</span><span class="s">&#39;Simple Scatterplot Matrix&#39;</span><span class="p">)</span>
+<span class="n">py</span><span class="o">.</span><span class="n">iplot</span><span class="p">(</span><span class="n">fig</span><span class="p">,</span> <span class="n">filename</span><span class="o">=</span><span class="s">&#39;Basic Scatterplot Matrix&#39;</span><span class="p">)</span>
 </pre></div>
 
 </div>
@@ -120,7 +120,7 @@ order: 2.9
 <div class="output_area"><div class="prompt output_prompt">Out[2]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~AdamKulidjian/52.embed" height="800px" width="800px"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~AdamKulidjian/66.embed" height="800px" width="800px"></iframe>
 </div>
 
 </div>
