Changed location of scatterplotmatrix to 'statistical'

--- a/_posts/python/scatterplot-matrix/2015-06-30-scatterplot-matrix.html
+++ b/_posts/python/scatterplot-matrix/2015-06-30-scatterplot-matrix.html
@@ -8,10 +8,10 @@ layout: user-guide
 name: Scatterplot Matrix
 language: python
 title: Python Scatterplot Matrix | plotly
-display_as: basic
+display_as: statistical
 has_thumbnail: true
 page_type: example_index
-order: 2.9
+order: 10.1
 ---
 {% raw %}
 <div class="cell border-box-sizing text_cell rendered">
