Changed name to Surface Triangulation

--- a/_posts/python/triangulation/2015-06-30-triangulation.html
+++ b/_posts/python/triangulation/2015-06-30-triangulation.html
@@ -5,7 +5,7 @@ title: Python Surface Triangulation | plotly
 has_thumbnail: true
 thumbnail: thumbnail/trisurf.jpg
 layout: user-guide
-name: Tri-Surf Plots
+name: Surface Triangulation
 language: python
 display_as: 3d_charts
 has_thumbnail: true
