Fixed up the last cell

--- a/_posts/python/triangulation/2015-06-30-triangulation.html
+++ b/_posts/python/triangulation/2015-06-30-triangulation.html
@@ -1,12 +1,13 @@
 ---
-permalink: python/triangulation
+permalink: python/triangulation/
 description: How to make Tri-Surf plots in Python with Plotly.
-title: Python Surface Triangulation | plotly
+name: Surface Triangulation | plotly
 has_thumbnail: true
 thumbnail: thumbnail/trisurf.jpg
 layout: user-guide
 name: Surface Triangulation
 language: python
+title: Python Surface Triangulation | plotly
 display_as: 3d_charts
 has_thumbnail: true
 page_type: example_index
