Updates on the lighting example

--- a/_posts/python/3d-surface-lighting/2015-06-30-3d-camera-lighting.html
+++ b/_posts/python/3d-surface-lighting/2015-06-30-3d-camera-lighting.html
@@ -102,7 +102,7 @@ order: 16
 <div class="output_area"><div class="prompt output_prompt">Out[5]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~tarzzz/2455.embed" height="525px" width="100%"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~tarzzz/2469.embed" height="525px" width="100%"></iframe>
 </div>
 
 </div>
@@ -160,7 +160,7 @@ Now, we will add some lightning effects to the above trace, one by one and see t
 <div class="output_area"><div class="prompt output_prompt">Out[6]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~tarzzz/2457.embed" height="525px" width="100%"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~tarzzz/2471.embed" height="525px" width="100%"></iframe>
 </div>
 
 </div>
@@ -213,7 +213,7 @@ Now, we will add some lightning effects to the above trace, one by one and see t
 <div class="output_area"><div class="prompt output_prompt">Out[7]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~tarzzz/2459.embed" height="525px" width="100%"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~tarzzz/2473.embed" height="525px" width="100%"></iframe>
 </div>
 
 </div>
@@ -266,7 +266,7 @@ Now, we will add some lightning effects to the above trace, one by one and see t
 <div class="output_area"><div class="prompt output_prompt">Out[8]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~tarzzz/2461.embed" height="525px" width="100%"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~tarzzz/2475.embed" height="525px" width="100%"></iframe>
 </div>
 
 </div>
@@ -296,7 +296,6 @@ Now, we will add some lightning effects to the above trace, one by one and see t
 
 <span class="n">fig</span><span class="o">.</span><span class="n">append_trace</span><span class="p">(</span><span class="n">trace1</span><span class="p">,</span> <span class="mi">1</span><span class="p">,</span> <span class="mi">1</span><span class="p">)</span>
 <span class="n">fig</span><span class="o">.</span><span class="n">append_trace</span><span class="p">(</span><span class="n">trace2</span><span class="p">,</span> <span class="mi">1</span><span class="p">,</span> <span class="mi">2</span><span class="p">)</span>
-<span class="n">py</span><span class="o">.</span><span class="n">iplot</span><span class="p">(</span><span class="n">fig</span><span class="p">)</span>
 </pre></div>
 
 </div>
@@ -316,10 +315,30 @@ Now, we will add some lightning effects to the above trace, one by one and see t
 </div>
 </div>
 
-<div class="output_area"><div class="prompt output_prompt">Out[9]:</div>
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[10]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython2"><pre><span class="n">py</span><span class="o">.</span><span class="n">iplot</span><span class="p">(</span><span class="n">fig</span><span class="p">)</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area"><div class="prompt output_prompt">Out[10]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~tarzzz/2463.embed" height="525px" width="100%"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~tarzzz/2477.embed" height="525px" width="100%"></iframe>
 </div>
 
 </div>
@@ -340,7 +359,7 @@ Now, we will add some lightning effects to the above trace, one by one and see t
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[10]:</div>
+<div class="prompt input_prompt">In&nbsp;[11]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="n">fig</span> <span class="o">=</span> <span class="n">tls</span><span class="o">.</span><span class="n">make_subplots</span><span class="p">(</span><span class="n">rows</span><span class="o">=</span><span class="mi">1</span><span class="p">,</span> <span class="n">cols</span><span class="o">=</span><span class="mi">2</span><span class="p">,</span><span class="n">specs</span><span class="o">=</span><span class="p">[[{</span><span class="s">&#39;is_3d&#39;</span><span class="p">:</span> <span class="bp">True</span><span class="p">},{</span><span class="s">&#39;is_3d&#39;</span><span class="p">:</span> <span class="bp">True</span><span class="p">}</span> <span class="p">]])</span>
@@ -369,10 +388,10 @@ Now, we will add some lightning effects to the above trace, one by one and see t
 </div>
 </div>
 
-<div class="output_area"><div class="prompt output_prompt">Out[10]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[11]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~tarzzz/2465.embed" height="525px" width="100%"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~tarzzz/2479.embed" height="525px" width="100%"></iframe>
 </div>
 
 </div>
@@ -387,6 +406,47 @@ Now, we will add some lightning effects to the above trace, one by one and see t
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="Combined-effects:">Combined effects:<a class="anchor-link" href="#Combined-effects:">&#182;</a></h2><p>The effects can also be added in a combined manner as follows:</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[12]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython2"><pre><span class="n">lighting_effects</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">(</span><span class="n">ambient</span><span class="o">=</span><span class="mf">0.4</span><span class="p">,</span> <span class="n">diffuse</span><span class="o">=</span><span class="mf">0.5</span><span class="p">,</span> <span class="n">roughness</span> <span class="o">=</span> <span class="mf">0.9</span><span class="p">,</span> <span class="n">specular</span><span class="o">=</span><span class="mf">0.6</span><span class="p">,</span> <span class="n">fresnel</span><span class="o">=</span><span class="mf">0.2</span><span class="p">)</span>
+<span class="n">trace</span> <span class="o">=</span> <span class="n">go</span><span class="o">.</span><span class="n">Surface</span><span class="p">(</span><span class="n">z</span><span class="o">=</span><span class="n">Z1</span><span class="p">,</span> <span class="n">colorscale</span><span class="o">=</span><span class="s">&#39;Viridis&#39;</span><span class="p">,</span> <span class="n">lighting</span><span class="o">=</span><span class="n">lighting_effects</span><span class="p">)</span>
+
+<span class="n">py</span><span class="o">.</span><span class="n">iplot</span><span class="p">([</span><span class="n">trace</span><span class="p">])</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area"><div class="prompt output_prompt">Out[12]:</div>
+
+<div class="output_html rendered_html output_subarea output_execute_result">
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~tarzzz/2481.embed" height="525px" width="100%"></iframe>
+</div>
+
+</div>
+
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<hr>
 
 </div>
 </div>
