--- a/_posts/python/dashboard/2015-07-29-dashboard-index.html
+++ b/_posts/python/dashboard/2015-07-29-dashboard-index.html
@@ -51,7 +51,7 @@ report_link: https://plot.ly/~Dreamshot/folder/Dreamshot:5957
           <iframe width="100%" height="480px" frameborder="0" scrolling="no" src="https://plot.ly/~jackp/10021.embed?link=false"></iframe>
         </div>
         <div class="chart-notes">
-          Make a <a href="https://plot.ly/{{page.language | capitalize}}/bar-charts/">bar chart</a> in {{page.language | capitalize}}
+          Make a <a href="https://plot.ly/{{page.language}}/bar-charts/">bar chart</a> in {{page.language | capitalize}}
         </div>
       </div>
     </div>
@@ -67,7 +67,7 @@ report_link: https://plot.ly/~Dreamshot/folder/Dreamshot:5957
           <iframe width="100%" height="480px" frameborder="0" scrolling="no" src="https://plot.ly/~jackp/10002.embed?link=false"></iframe>
         </div>
         <div class="chart-notes">
-          Make <a href="https://plot.ly/{{page.language | capitalize}}/choropleth-maps/">choropleth maps, <a href="https://plot.ly/{{page.language | capitalize}}/bubble-maps/">bubble maps</a>, and <a href="https://plot.ly/{{page.language | capitalize}}/lines-on-maps/">lines on maps</a> in {{page.language | capitalize}}          
+          Make <a href="https://plot.ly/{{page.language}}/choropleth-maps/">choropleth maps, <a href="https://plot.ly/{{page.language}}/bubble-maps/">bubble maps</a>, and <a href="https://plot.ly/{{page.language}}/lines-on-maps/">lines on maps</a> in {{page.language | capitalize}}          
         </div>
       </div>
     </div>
@@ -93,7 +93,7 @@ report_link: https://plot.ly/~Dreamshot/folder/Dreamshot:5957
           <iframe width="100%" height="480px" frameborder="0" scrolling="no" src="https://plot.ly/~jackp/10033.embed?link=false"></iframe>
         </div>
         <div class="chart-notes">
-          Make a <a href="https://plot.ly/{{page.language | capitalize}}/histograms/">histogram</a> in {{page.language | capitalize}}
+          Make a <a href="https://plot.ly/{{page.language}}/histograms/">histogram</a> in {{page.language | capitalize}}
         </div>
       </div>
     </div>
