--- a/_posts/2015-04-05-ggplot2-index.html
+++ b/_posts/2015-04-05-ggplot2-index.html
@@ -51,7 +51,7 @@ geom_smooth(aes(colour = cut, fill = cut)) + facet_wrap(~ cut)
 
 			<div>
 				<p>
-					<code>ggplotly</code> works by <a href="https://plot.ly/ggplot2/user-guide">serializing ggplot2 figures into plotly's universal graph JSON</a>. See the <a href="http://ropensci.github.io/plotly-test-table/tables/0e3d5ca144d27d8416318824c1b6ec1421a51045/index.html">ggplot2 → plotly test tables</a> for current ggplot2 conversion coverage. Submit issues or contribute on <a href="https://github.com/ropensci/plotly/issues">rOpenSci</a>.
+					<code>ggplotly</code> works by <a href="https://plot.ly/ggplot2/user-guide">serializing ggplot2 figures into plotly's universal graph JSON</a>. See the <a href="http://ropensci.github.io/plotly/ggplot2/">ggplot2 → plotly test tables</a> for current ggplot2 conversion coverage. Submit issues or contribute on <a href="https://github.com/ropensci/plotly/issues">rOpenSci</a>.
 				</p>
 			</div>
 
