--- a/_posts/python/offline/2015-06-30-plotly_offline.html
+++ b/_posts/python/offline/2015-06-30-plotly_offline.html
@@ -1,6 +1,6 @@
 ---
 permalink: python/offline/
-description: How to use Plotly offline inside IPython notebooks with Plotly Offline
+description: How to use Plotly offline inside IPython notebooks
 name: Plotly Offline for IPython Notebooks
 has_thumbnail: false
 thumbnail: /images/static-image
@@ -17,7 +17,7 @@ page_type: example_index
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Plotly-Offline">Plotly Offline<a class="anchor-link" href="#Plotly-Offline">&#182;</a></h1><p>Plotly Offline brings interactive Plotly graphs to the offline (local) environment.</p>
+<p>Plotly Offline brings interactive Plotly graphs to the offline (local) environment.</p>
 <p>Instead of saving the graphs to a server, your data and graphs will remain in your local system.
 When your ready to share, you can just publish them to the web with an online <a href="https://plot.ly/feed">Plotly account</a> or to your company's internal <a href="https://plot.ly/product/enterprise">Plotly Enterprise</a>.</p>
 <p>To get started with Plotly Offline, upgrade to the <code>1.9.x</code> series or higher:</p>
@@ -869,70 +869,6 @@ IIBAMAGFN9gc0hBAAAEEEEAAAQTGE/h/OVQVjQ6KhscAAAAASUVORK5CYII=
 <iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~kevintest/897.embed" height="900px" width="1000px"></iframe>
 </div>
 
-</div>
-
-</div>
-</div>
-
-</div>
-<div class="cell border-box-sizing code_cell rendered">
-<div class="input">
-<div class="prompt input_prompt">In&nbsp;[37]:</div>
-<div class="inner_cell">
-    <div class="input_area">
-<div class=" highlight hl-ipython2"><pre><span class="kn">from</span> <span class="nn">IPython.display</span> <span class="kn">import</span> <span class="n">display</span><span class="p">,</span> <span class="n">HTML</span>
-
-<span class="n">display</span><span class="p">(</span><span class="n">HTML</span><span class="p">(</span><span class="s">&#39;&lt;link href=&quot;//fonts.googleapis.com/css?family=Open+Sans:600,400,300,200|Inconsolata|Ubuntu+Mono:400,700&quot; rel=&quot;stylesheet&quot; type=&quot;text/css&quot; /&gt;&#39;</span><span class="p">))</span>
-<span class="n">display</span><span class="p">(</span><span class="n">HTML</span><span class="p">(</span><span class="s">&#39;&lt;link rel=&quot;stylesheet&quot; type=&quot;text/css&quot; href=&quot;http://help.plot.ly/documentation/all_static/css/ipython-notebook-custom.css&quot;&gt;&#39;</span><span class="p">))</span>
-
-<span class="o">!</span> pip install git+https://github.com/plotly/publisher.git --upgrade
-    
-<span class="kn">import</span> <span class="nn">publisher</span>
-<span class="n">publisher</span><span class="o">.</span><span class="n">publish</span><span class="p">(</span>
-    <span class="s">&#39;plotly_offline.ipynb&#39;</span><span class="p">,</span> <span class="s">&#39;python/offline/&#39;</span><span class="p">,</span> <span class="s">&#39;Plotly Offline for IPython Notebooks&#39;</span><span class="p">,</span>
-    <span class="s">&#39;How to use Plotly offline inside IPython notebooks with Plotly Offline&#39;</span><span class="p">,</span>
-    <span class="n">title</span><span class="o">=</span> <span class="s">&#39;Plotly Offline for IPython Notebooks&#39;</span><span class="p">,</span>
-    <span class="n">name</span> <span class="o">=</span> <span class="s">&#39;Offline Plots in Plotly&#39;</span><span class="p">,</span>
-    <span class="n">has_thumbnail</span><span class="o">=</span><span class="s">&#39;False&#39;</span><span class="p">,</span> 
-    <span class="n">language</span><span class="o">=</span><span class="s">&#39;python&#39;</span><span class="p">,</span> <span class="n">page_type</span><span class="o">=</span><span class="s">&#39;example_index&#39;</span><span class="p">)</span>
-</pre></div>
-
-</div>
-</div>
-</div>
-
-<div class="output_wrapper">
-<div class="output">
-
-
-<div class="output_area"><div class="prompt"></div>
-
-<div class="output_html rendered_html output_subarea ">
-<link href="//fonts.googleapis.com/css?family=Open+Sans:600,400,300,200|Inconsolata|Ubuntu+Mono:400,700" rel="stylesheet" type="text/css" />
-</div>
-
-</div>
-
-<div class="output_area"><div class="prompt"></div>
-
-<div class="output_html rendered_html output_subarea ">
-<link rel="stylesheet" type="text/css" href="http://help.plot.ly/documentation/all_static/css/ipython-notebook-custom.css">
-</div>
-
-</div>
-
-<div class="output_area"><div class="prompt"></div>
-<div class="output_subarea output_stream output_stdout output_text">
-<pre>Collecting git+https://github.com/plotly/publisher.git
-  Cloning https://github.com/plotly/publisher.git to /var/folders/j3/gt_q6y096cjfts4q8zq2dm2c0000gn/T/pip-CQ5WJT-build
-Installing collected packages: publisher
-  Found existing installation: publisher 0.10
-    Uninstalling publisher-0.10:
-      Successfully uninstalled publisher-0.10
-  Running setup.py install for publisher
-Successfully installed publisher-0.10
-</pre>
-</div>
 </div>
 
 </div>
