python getting started edits

--- a/_posts/python/getting-started/2015-06-30-getting-started.html
+++ b/_posts/python/getting-started/2015-06-30-getting-started.html
@@ -26,32 +26,30 @@ page_type: u-guide
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>To install Plotly's Python package, use the package manager <strong>pip</strong> inside your terminal.<br>
-If you don't have <strong>pip</strong> installed on your machine, <a href="https://pip.pypa.io/en/latest/installing.html">click here</a> for pip's installation instructions.</p>
+<p>To install Plotly's python package, use the package manager <strong>pip</strong> inside your terminal.<br>
+If you don't have <strong>pip</strong> installed on your machine, <a href="https://pip.pypa.io/en/latest/installing.html">click here</a> for pip's installation instructions.
+<br>
+<br>
+<code>$ pip install plotly</code>
+<br>or
+<br><code>$ sudo pip install plotly</code></p>
 
 </div>
 </div>
-</div>$ pip install plotly
+</div>
 <div class="cell border-box-sizing text_cell rendered">
 <div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>or</p>
+<p>Plotly's Python package is <a href="https://github.com/plotly/plotly.py/blob/master/CHANGELOG.md">updated frequently</a>! To upgrade, run:
+<br>
+<br>
+<code>$ pip install plotly --upgrade</code></p>
 
 </div>
 </div>
-</div>$ sudo pip install plotly
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
 </div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<p>Plotly's Python package is <a href="https://github.com/plotly/plotly.py/blob/master/CHANGELOG.md">updated frequently</a>! To upgrade, run:</p>
-
-</div>
-</div>
-</div>$ pip install plotly --upgrade
 <div class="cell border-box-sizing text_cell rendered">
 <div class="prompt input_prompt">
 </div>
@@ -67,17 +65,13 @@ If you don't have <strong>pip</strong> installed on your machine, <a href="https
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>After installing the Plotly package, you're ready to fire up python:</p>
-
-</div>
-</div>
-</div>$ python
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<p>and set your credentials:</p>
+<p>After installing the Plotly package, you're ready to fire up python:
+<br>
+<br>
+<code>$ python</code>
+<br>
+<br>
+and set your credentials:</p>
 
 </div>
 </div>
@@ -112,15 +106,18 @@ Find your API key <a href="https://plot.ly/settings/api">here</a>.</p>
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>The initialization step places a special <strong>.plotly/.credentials</strong> file in your home directory. Your <strong>~/.plotly/.credentials</strong> file should look something like this:</p>
+<p>The initialization step places a special <strong>.plotly/.credentials</strong> file in your home directory. Your <strong>~/.plotly/.credentials</strong> file should look something like this:
+<br></p>
 
-</div>
-</div>
-</div>{
+<pre><code>{
     "username": "DemoAccount",
     "stream_ids": ["ylosqsyet5", "h2ct8btk1s", "oxz4fm883b"],
     "api_key": "lr1c37zw81"
-}
+}</code></pre>
+
+</div>
+</div>
+</div>
 <div class="cell border-box-sizing text_cell rendered">
 <div class="prompt input_prompt">
 </div>
@@ -150,10 +147,23 @@ If your company has a Plotly On-Premise server, change the Python API endpoint s
 
 </div>
 </div>
-</div>import plotly 
-plotly.tools.set_config_file(plotly_domain='https://plotly.your-company.com',
-                             plotly_streaming_domain='stream-plotly.your-company.com', 
-                             plotly_api_domain='https://api-plotly.your-company.com')
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly</span> 
+<span class="n">plotly</span><span class="o">.</span><span class="n">tools</span><span class="o">.</span><span class="n">set_config_file</span><span class="p">(</span><span class="n">plotly_domain</span><span class="o">=</span><span class="s">&#39;https://plotly.your-company.com&#39;</span><span class="p">,</span>
+                             <span class="n">plotly_streaming_domain</span><span class="o">=</span><span class="s">&#39;stream-plotly.your-company.com&#39;</span><span class="p">,</span> 
+                             <span class="n">plotly_api_domain</span><span class="o">=</span><span class="s">&#39;https://api-plotly.your-company.com&#39;</span><span class="p">)</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+</div>
 <div class="cell border-box-sizing text_cell rendered">
 <div class="prompt input_prompt">
 </div>
@@ -397,42 +407,6 @@ iplot(figure_or_data, **plot_options)
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Copy and paste the following to create your first Plotly graph using the Plotly Python library:</p>
-
-</div>
-</div>
-</div>
-<div class="cell border-box-sizing code_cell rendered">
-<div class="input">
-<div class="prompt input_prompt">In&nbsp;[3]:</div>
-<div class="inner_cell">
-    <div class="input_area">
-<div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>
-<span class="kn">from</span> <span class="nn">plotly.graph_objs</span> <span class="kn">import</span> <span class="o">*</span>
-
-<span class="n">trace0</span> <span class="o">=</span> <span class="n">Scatter</span><span class="p">(</span>
-    <span class="n">x</span><span class="o">=</span><span class="p">[</span><span class="mi">1</span><span class="p">,</span> <span class="mi">2</span><span class="p">,</span> <span class="mi">3</span><span class="p">,</span> <span class="mi">4</span><span class="p">],</span>
-    <span class="n">y</span><span class="o">=</span><span class="p">[</span><span class="mi">10</span><span class="p">,</span> <span class="mi">15</span><span class="p">,</span> <span class="mi">13</span><span class="p">,</span> <span class="mi">17</span><span class="p">]</span>
-<span class="p">)</span>
-<span class="n">trace1</span> <span class="o">=</span> <span class="n">Scatter</span><span class="p">(</span>
-    <span class="n">x</span><span class="o">=</span><span class="p">[</span><span class="mi">1</span><span class="p">,</span> <span class="mi">2</span><span class="p">,</span> <span class="mi">3</span><span class="p">,</span> <span class="mi">4</span><span class="p">],</span>
-    <span class="n">y</span><span class="o">=</span><span class="p">[</span><span class="mi">16</span><span class="p">,</span> <span class="mi">5</span><span class="p">,</span> <span class="mi">11</span><span class="p">,</span> <span class="mi">9</span><span class="p">]</span>
-<span class="p">)</span>
-<span class="n">data</span> <span class="o">=</span> <span class="n">Data</span><span class="p">([</span><span class="n">trace0</span><span class="p">,</span> <span class="n">trace1</span><span class="p">])</span>
-
-<span class="n">unique_url</span> <span class="o">=</span> <span class="n">py</span><span class="o">.</span><span class="n">plot</span><span class="p">(</span><span class="n">data</span><span class="p">,</span> <span class="n">filename</span> <span class="o">=</span> <span class="s">&#39;basic-line&#39;</span><span class="p">)</span>
-</pre></div>
-
-</div>
-</div>
-</div>
-
-</div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
 <p>You can also create plotly graphs with <strong>matplotlib</strong> syntax. Learn more in our <a href="https://plot.ly/matplotlib/">matplotlib documentation</a>.
 You can also create plotly graphs within an <strong>IPython notebook</strong>. Learn more in our <a href="https://plot.ly/ipython-notebooks/">IPython notebook documentation</a>.</p>
 
@@ -465,25 +439,25 @@ You can also create plotly graphs within an <strong>IPython notebook</strong>. L
 <div class="text_cell_render border-box-sizing rendered_html">
 <ul>
 <li><strong>public</strong>: 
-<pre><code>  Anyone can view this graph. It will appear in your profile
-  and can appear in search engines. You do not need to be
-  logged in to Plotly to view this chart.</code></pre>
+<pre><code> Anyone can view this graph. It will appear in your profile
+ and can appear in search engines. You do not need to be
+ logged in to Plotly to view this chart.</code></pre>
 </li>
 <li><strong>private</strong>:
-<pre><code>  Only you can view this plot. It will not appear in the
-  Plotly feed, your profile, or search engines. You must be
-  logged in to Plotly to view this graph. You can privately
-  share this graph with other Plotly users in your online
-  Plotly account and they will need to be logged in to
-  view this plot.</code></pre>
+<pre><code> Only you can view this plot. It will not appear in the
+ Plotly feed, your profile, or search engines. You must be
+ logged in to Plotly to view this graph. You can privately
+ share this graph with other Plotly users in your online
+ Plotly account and they will need to be logged in to
+ view this plot.</code></pre>
 </li>
 <li><strong>secret</strong>: 
-<pre><code>  Anyone with this secret link can view this chart. It will
-  not appear in the Plotly feed, your profile, or search
-  engines. If it is embedded inside a webpage or an IPython
-  notebook, anybody who is viewing that page will be able to
-  view the graph. You do not need to be logged in to view
-  this plot.</code></pre>
+<pre><code> Anyone with this secret link can view this chart. It will
+ not appear in the Plotly feed, your profile, or search
+ engines. If it is embedded inside a webpage or an IPython
+ notebook, anybody who is viewing that page will be able to
+ view the graph. You do not need to be logged in to view
+ this plot.</code></pre>
 </li>
 </ul>
 
@@ -495,17 +469,7 @@ You can also create plotly graphs within an <strong>IPython notebook</strong>. L
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>For more examples on privacy settings please visit <a href="https://plot.ly/python/privacy/">Python privacy documentation</a></p>
-
-</div>
-</div>
-</div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<p>By default all plots are set to <strong>public</strong>.  Users with free account have the permission to keep one private plot. If you have additional private storage need, please visit <a href="https://plot.ly/products/">Plotly products page</a>.</p>
+<p>By default all plots are set to <strong>public</strong>.  Users with free account have the permission to keep one private plot. If you have additional private storage need, please visit <a href="https://plot.ly/products/">Plotly products page</a>.<br> For more examples on privacy settings please visit <a href="https://plot.ly/python/privacy/">Python privacy documentation</a></p>
 
 </div>
 </div>
